# loading2

./: README.md  loading2.py  pyproject.toml
tests/: test_loading_decorator.py
